--- a/Shapextractor.ini
+++ b/Shapextractor.ini
@@ -4,14 +4,14 @@ An = 25
 B = 11
 Bn = 8
 LASER = 18
+LPWM = 12
 LIGHT = 7
 DELAY = 0.002
 CROPH = 180
-QUALITY = 1
+QUALITY = 0
 
 [C++]
 CAMERA_HFOV = 50.0f
-CAMERA_VFOV =(CAMERA_HFOV*4.0f/5.0f)
 CAMERA_DISTANCE = 0.30f
 LASER_OFFSET = 45.0f 
 HORIZ_AVG = 2
