--- a/Shapextractor.ini
+++ b/Shapextractor.ini
@@ -9,12 +9,24 @@ LIGHT = 7
 DELAY = 0.002
 CROPH = 180
 QUALITY = 0
+RESV=640
+
+RESH=480
+
+ROT=0
+
 
 [C++]
-CAMERA_HFOV = 50.0f
-CAMERA_DISTANCE = 0.30f
-LASER_OFFSET = 45.0f 
+CAMERA_HFOV = 50.0
+CAMERA_DISTANCE = 0.30
+LASER_OFFSET = 45.0
 HORIZ_AVG = 2
 VERT_AVG = 2 
 FRAME_SKIP = 1  
 POINT_SKIP = 1
+
+[EMAIL]
+Enable = 1
+SMTP = 
+To =
+From =
