--- a/Shapextractor.ini
+++ b/Shapextractor.ini
@@ -9,12 +9,9 @@ LIGHT = 7
 DELAY = 0.002
 CROPH = 180
 QUALITY = 0
-RESV=640
-
-RESH=480
-
-ROT=0
-
+RESW = 640
+RESH = 480
+ROT = 0
 
 [C++]
 CAMERA_HFOV = 50.0
